--- a/app/html/main.html
+++ b/app/html/main.html
@@ -4,10 +4,11 @@
     <link rel='stylesheet' href='../css/photon.css'>
   </head>
   <body>
-    <p>Hello world</p>
+    <div id='root'></div>
     <script>
       window.onload = function() {
         require('babel-register');
+        require('../javascripts/renderer/components/app.jsx');
       }
     </script>
   </body>
