--- a/app/html/main.html
+++ b/app/html/main.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel='stylesheet' href='../css/photon.css'>
+    <link rel='stylesheet' href='../css/app.css'>
   </head>
   <body>
     <div id='root'></div>
