--- a/app/html/main.html
+++ b/app/html/main.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id='root'></div>
+    <script>require('electron-connect').client.create();</script>
     <script>
       window.onload = function() {
         require('babel-register');
