--- a/app/html/main.html
+++ b/app/html/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel='stylesheet' href='../css/photon.css'>
+    <link rel='stylesheet' href='../../node_modules/photon/dist/css/photon.css'>
     <link rel='stylesheet' href='../css/app.css'>
   </head>
   <body>
